﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-07-01
	Changed: Ensure multiple initialization failures all get logged.
	Fixed: Dirty fix for adjust delay debugging printing errors when it encounters empty CreationDate in __InstanceCreationEvent.TargetInstance.
### 2019-06-30
	Changed: Rule name is now included in process start&exit logging.
### 2019-06-29
	Changed: Crash log now includes filename of fault location.
	Changed: Safer native calls.
	Changed: App version is no longer stated in main window title bar.
### 2019-06-28
	Fixed: DynDNS update was not properly closed, potentially leaking an open connection (until it times out).
	Changed: DynDNS setup no longer is limited to single service. Only one type of updates are supported still, however.
	Changed: Disabled some unneeded features of .NET/C#, hopefully resulting in slightly faster start-up time.
	Fixed: Initialization failure bleeds through and the app is launched "successfully".
### 2019-06-26
	Changed: IP address handling.
	Fixed: Link-local network addresses were reported as public ones.
	Fixed: Some deadlocks, mostly related to exclusive mode.
### 2019-06-25
	Fixed: Health Monitor was using free memory bytes as megabytes.
	Added: Basic DynDNS support test.
	Fixed: Some Audio debug was showing when it shouldn't and vice versa.
	Internal: Some behind the scenes tweaking.
### 2019-06-15
	Fixed: Error in process select dialog while scanning for existing processes.
### 2019-06-12
	Fixed: Advanced config could not be opened from tray context menu if main window was closed.
	Changed: Initialization should now be more reliable.
### 2019-06-10
	Added: Native Image generation experiment.
### 2019-06-05
	Changed: Exclusive mode was being a little eager.
	Changed: Ignore list is checked earlier for matches.
### 2019-06-03