@@ -6,6 +6,7 @@ Comprehensive changes can be found in Git change history:
 ### 2019-07-01
 	Changed: Ensure multiple initialization failures all get logged.
 	Fixed: Dirty fix for adjust delay debugging printing errors when it encounters empty CreationDate in __InstanceCreationEvent.TargetInstance.
+	Fixed: Weird ReflectionTypeLoadException error
 ### 2019-06-30
 	Changed: Rule name is now included in process start&exit logging.
 ### 2019-06-29
